--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@11ty/eleventy": "^0.12.1",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.0",
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "acorn": "^8.1.0",
